--- a/.gitignore
+++ b/.gitignore
@@ -229,3 +229,4 @@ gradle-app.setting
 # End of https://www.toptal.com/developers/gitignore/api/java,intellij,gradle,macos,windows
 *.idea/
 application.properties
+application.yml
